Convert sample app to Kotlin
Mostly just the IDE conversion.

--- a/sample/src/main/res/layout/view_pager.xml
+++ b/sample/src/main/res/layout/view_pager.xml
@@ -23,7 +23,7 @@
 
     </RelativeLayout>
 
-    <androidx.core.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/horizontal_pager"
         style="@style/mainPanel"
         android:visibility="gone" />
